@@ -8,6 +8,7 @@ import com.example.demo.repository.AssetRepository;
 import com.example.demo.service.AssetLifecycleEventService;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
+
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -15,42 +16,50 @@ import java.util.List;
 @Service
 @Transactional
 public class AssetLifecycleEventServiceImpl implements AssetLifecycleEventService {
+
     private final AssetLifecycleEventRepository eventRepository;
     private final AssetRepository assetRepository;
-    
-    public AssetLifecycleEventServiceImpl(AssetLifecycleEventRepository eventRepository,
-                                        AssetRepository assetRepository) {
+
+    public AssetLifecycleEventServiceImpl(
+            AssetLifecycleEventRepository eventRepository,
+            AssetRepository assetRepository) {
+
         this.eventRepository = eventRepository;
         this.assetRepository = assetRepository;
     }
-    
+
     @Override
     public AssetLifecycleEvent logEvent(Long assetId, AssetLifecycleEvent event) {
+
         Asset asset = assetRepository.findById(assetId)
-            .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
-        
-        if (event.getEventType() == null || event.getEventType().trim().isEmpty()) {
+                .orElseThrow(() -> new ResourceNotFoundException("Asset not found"));
+
+        if (event.getEventType() == null || event.getEventType().isBlank()) {
             throw new IllegalArgumentException("Event type is required");
         }
-        
-        if (event.getEventDescription() == null || event.getEventDescription().trim().isEmpty()) {
-            throw new IllegalArgumentException("Event description cannot be blank");
+
+        if (event.getEventDescription() == null || event.getEventDescription().isBlank()) {
+            throw new IllegalArgumentException("Event description is required");
         }
-        
-        if (event.getEventDate() == null || event.getEventDate().isAfter(LocalDate.now())) {
+
+        if (event.getEventDate() == null ||
+                event.getEventDate().isAfter(LocalDate.now())) {
             throw new IllegalArgumentException("Event date cannot be in the future");
         }
-        
+
         event.setAsset(asset);
         event.setLoggedAt(LocalDateTime.now());
+
         return eventRepository.save(event);
     }
-    
+
     @Override
     public List<AssetLifecycleEvent> getEventsForAsset(Long assetId) {
+
         if (!assetRepository.existsById(assetId)) {
             throw new ResourceNotFoundException("Asset not found");
         }
+
         return eventRepository.findByAssetIdOrderByEventDateDesc(assetId);
     }
 }
